- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.8` (in progress)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.42.1`, semconv `1.26.0-alpha`, instrumentation `2.8.0-alpha`
** [BREAK] Deprecated `wrap-exception-event` and `exception-event-interceptor`.
These will be stubbed out and later removed in future releases.
https://opentelemetry.io/docs/specs/semconv/attributes-registry/exception/#exception-escaped[OpenTelemetry no longer recommends to record non-escaping exceptions.]
** [BREAK] `add-exception!` and `add-interceptor-exception!` now assume the exception is escaping the span's scope i.e. former option `:escaping?` is true.
** [ADD] `memory-mode` option for programmatically configured OTLP exporters.
** [BREAK] `retry-policy` default changed (from disabled) for programmatically configured OTLP exporters.
* [ADD] Programmatic configuration of log record exporters used for debugging.
* [BREAK] Pedestal `0.7.0` in microservices examples.
Pedestal `0.7.0` introduces its own support for OpenTelemetry, including a new interceptor `io.pedestal.http.tracing/request-tracing-interceptor`.
This overlaps functionality with `clj-otel` interceptors, so should be disabled by setting `:io.pedestal.http/tracing` to `nil` in the Pedestal service map.
* [MAINT] Clojure `1.12.0` However `clj-otel` retains compatibility with Clojure `1.10.3` and later.

=== `0.2.7` (2024-07-01)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Support for creating and setting gauges that take measurements synchronously.
Use `steffan-westcott.clj-otel.api.metrics.instrument/set!` to synchronously set a gauge to a given measurement.