@@ -2,4 +2,4 @@
 
 {:paths ["src"]
  :deps  {org.clojure/clojure {:mvn/version "1.12.0"}
-         io.opentelemetry.contrib/opentelemetry-aws-resources {:mvn/version "1.42.0-alpha"}}}
+         io.opentelemetry.contrib/opentelemetry-aws-resources {:mvn/version "1.43.0-alpha"}}}
