@@ -2,4 +2,4 @@
 
 {:paths ["src"]
  :deps  {org.clojure/clojure {:mvn/version "1.12.0"}
-         io.opentelemetry/opentelemetry-exporter-logging {:mvn/version "1.42.1"}}}
+         io.opentelemetry/opentelemetry-exporter-logging {:mvn/version "1.43.0"}}}
