@@ -3,6 +3,6 @@
 {:paths   ["src"]
  :deps    {org.clojure/clojure {:mvn/version "1.12.0"}
            com.github.steffan-westcott/clj-otel-sdk-common {:local/root "../clj-otel-sdk-common"}
-           io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.42.1-alpha"}}
+           io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.43.0-alpha"}}
  :aliases {:release  {:override-deps {com.github.steffan-westcott/clj-otel-sdk-common {:mvn/version "0.2.8"}}}
            :snapshot {:override-deps {com.github.steffan-westcott/clj-otel-sdk-common {:mvn/version "0.2.8-SNAPSHOT"}}}}}
