@@ -698,8 +698,8 @@ For an example application `my-app` that exports traces only using OTLP over gRP
                      "-Dotel.metrics.exporter=none"
                      "-Dotel.logs.exporter=none"
                      "-Dotel.exporter.otlp.traces.protocol=grpc"]
-          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.42.1"}
-                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "2.8.0-alpha"}
+          :extra-deps {io.opentelemetry/opentelemetry-exporter-otlp               {:mvn/version "1.43.0"}
+                       io.opentelemetry.instrumentation/opentelemetry-resources   {:mvn/version "2.9.0-alpha"}
                        io.grpc/grpc-netty-shaded                                  {:mvn/version "1.71.0"}
                        io.grpc/grpc-protobuf                                      {:mvn/version "1.71.0"}
                        io.grpc/grpc-stub                                          {:mvn/version "1.71.0"}}}}}
