@@ -30,13 +30,13 @@
                                      "-Dotel.logs.exporter=none"]
 
                         :extra-deps {;; Automatically add various OpenTelemetry resources to exported telemetry
-                                     io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.8.0-alpha"}
+                                     io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.9.0-alpha"}
 
                                      ;; Enable export of telemetry using OpenTelemetry Protocol (OTLP)
-                                     io.opentelemetry/opentelemetry-exporter-otlp       {:mvn/version "1.42.1"}
+                                     io.opentelemetry/opentelemetry-exporter-otlp       {:mvn/version "1.43.0"}
 
                                      ;; Enable export of metrics to Prometheus via HTTP server for scraping
-                                     io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.42.1-alpha"}}}
+                                     io.opentelemetry/opentelemetry-exporter-prometheus {:mvn/version "1.43.0-alpha"}}}
 
            ;; Include this alias for the OTLP exporter gRPC implementation to use Netty transport instead of default OkHttp
            :grpc-netty {:extra-deps {io.grpc/grpc-netty-shaded {:mvn/version "1.71.0"}
@@ -51,6 +51,6 @@
 
                                      ;; Add trace_id, span_id and trace_flags to Log4j2 NDC
                                      io.opentelemetry.instrumentation/opentelemetry-log4j-context-data-2.17-autoconfigure
-                                     {:mvn/version "2.8.0-alpha"}}
+                                     {:mvn/version "2.9.0-alpha"}}
                         :jvm-opts   ["-Dclojure.tools.logging.factory=clojure.tools.logging.impl/log4j2-factory"
                                      "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager"]}}}
