@@ -20,10 +20,10 @@
            {:local/root "../../../../../clj-otel-instrumentation-runtime-telemetry-java17"}
 
            ;; OpenTelemetry exporter that uses OTLP
-           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.42.1"}
+           io.opentelemetry/opentelemetry-exporter-otlp {:mvn/version "1.43.0"}
 
            ;; Automatically adds OpenTelemetry resources to exported telemetry
-           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.8.0-alpha"}
+           io.opentelemetry.instrumentation/opentelemetry-resources {:mvn/version "2.9.0-alpha"}
 
            ;; Pedestal HTTP server with Jetty integration
            io.pedestal/pedestal.interceptor {:mvn/version "0.7.2"}
@@ -45,11 +45,11 @@
           }
 
  :aliases {:log4j {:extra-deps {;; Log4j2 OTLP appender
-                                io.opentelemetry.instrumentation/opentelemetry-log4j-appender-2.17 {:mvn/version "2.8.0-alpha"}
+                                io.opentelemetry.instrumentation/opentelemetry-log4j-appender-2.17 {:mvn/version "2.9.0-alpha"}
 
                                 ;; Add trace_id, span_id and trace_flags to Log4j2 NDC
                                 io.opentelemetry.instrumentation/opentelemetry-log4j-context-data-2.17-autoconfigure
-                                {:mvn/version "2.8.0-alpha"}
+                                {:mvn/version "2.9.0-alpha"}
 
                                 ;; Redirect SLF4J, Apache (Jakarta) Commons Logging and java.util.logging to Log4j2 implementation
                                 org.apache.logging.log4j/log4j-core        {:mvn/version "2.24.3"}
